# rocDecode

./: .Doxyfile  .DoxygenLayout.xml  .gitignore  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  rocDecode-setup.py
.azuredevops/: rocm-ci.yml
.github/: CODEOWNERS  dependabot.yml
.jenkins/: common.groovy  precheckin.groovy
api/: rocdecode.h  rocdecode_version.h  rocparser.h
cmake/: FindFFmpeg.cmake  FindLibdrm.cmake  FindLibva.cmake  FindrocDecode.cmake
docker/: README.md  rocDecode-on-ubuntu20.dockerfile  rocDecode-on-ubuntu22.dockerfile  vcnDECODE-on-ubuntu20.dockerfile  vcnDECODE-on-ubuntu22.dockerfile
docs/: .gitignore  conf.py  index.md  index.rst  quick_overview.md  quickstart.md  rocDecodeUserGuide.md  what-is-rocDecode.md  what-is-rocDecode.rst
docs/conceptual/: video-decoding-pipeline.md  video-decoding-pipeline.rst
docs/doxygen/: Doxyfile  DoxygenLayout.xml
docs/how-to/: Create-a-decoder-using-rocDecCreateDecoder().md  Create-a-decoder-using-rocDecCreateDecoder.md  Create-parser-object-using-rocDecCreateVideoParser().md  Create-parser-object-using-rocDecCreateVideoParser.md  Decode-the-frame-using-rocDecDecodeFrame().md  Decode-the-frame-using-rocDecDecodeFrame.md  Destroy-the-decoder.md  Destroy-the-parser-using-rocDecDestroyVideoParser().md  Destroy-the-parser-using-rocDecDestroyVideoParser.md  Parse-video-data-using-rocDecParseVideoData().md  Parse-video-data-using-rocDecParseVideoData.md  Prepare-the-decoded-frame-for-further-processing.md  Query-decode-capabilities-using-rocDecGetDecoderCaps().md  Query-decode-capabilities-using-rocDecGetDecoderCaps.md  Query-the-decoding-status.md  Reconfigure-the-decoder.md  Reconfigure-the-decorder.md  Use-rocDecode-API.md  Using-rocDecode-API.md  index.md  using-rocdecode.md  using-rocdecode.rst
docs/install/: index.md  install.md  install.rst  quick-start.md  quick-start.rst
docs/reference/: index.md
docs/sphinx/: _toc.yml.in  requirements.in  requirements.txt
docs/tutorial/: decodingPipeline.md  hardwareCapabilities.md  index.rst  overview.md  usingAPI.md
docs/tutorials/: README.md
include/: log.h
samples/: CMakeLists.txt  README.md  common.h
samples/testScripts/: README.md  run_rocDecodeSamples.py  run_rocDecode_Conformance.py
samples/videoDecode/: CMakeLists.txt  README.md  videodecode.cpp
samples/videoDecodeBatch/: CMakeLists.txt  README.md  videodecodebatch.cpp
samples/videoDecodeFork/: CMakeLists.txt  README.md  videodecodefork.cpp
samples/videoDecodeMem/: CMakeLists.txt  README.md  videodecodemem.cpp
samples/videoDecodeMultiFiles/: CMakeLists.txt  README.md  videodecodemultifiles.cpp
samples/videoDecodeMultiThreadMultiFiles/: CMakeLists.txt  videodecodemultithreadmultifiles.cpp
samples/videoDecodeMultiThreadsMultiFiles/: CMakeLists.txt  README.md  videodecodemultithreadsmultifiles.cpp
samples/videoDecodePerf/: CMakeLists.txt  README.md  videodecodeperf.cpp
samples/videoDecodeRGB/: CMakeLists.txt  README.md  videodecrgb.cpp
samples/videoToSequence/: CMakeLists.txt  README.md  videotosequence.cpp
src/: commons.h  dec_handle.h  roc_decoder.cpp  roc_decoder.h  rocdecode_api.cpp  rocdecoder.cpp  rocdecoder.h  rocdecoder.hpp
src/parser/: av1_defines.h  av1_parser.cpp  av1_parser.h  avc_defines.h  avc_parser.cpp  avc_parser.h  bit_stream_parser.cpp  bit_stream_parser.h  h264_parser.cpp  h264_parser.h  hevc_defines.h  hevc_parser.cpp  hevc_parser.h  parser_buffer.cpp  parser_buffer.h  parser_handle.h  roc_video_parser.cpp  roc_video_parser.h  rocparser_api.cpp  vp9_defines.h  vp9_parser.cpp  vp9_parser.h
src/parser/bit_stream_parser/: bit_stream_parser.cpp  bit_stream_parser.h  bit_stream_parser_h265.cpp  bit_stream_parser_h265.h  parser_buffer.h  result.h
src/parser/common/: bit_stream_parser.cpp  bit_stream_parser.h  byte_array.h  context.cpp  context.h  data_stream.cpp  data_stream.h  parser_buffer.cpp  parser_buffer.h  parser_data.h  platform.h
src/parser/hevc/: bit_stream_parser_h265.cpp  bit_stream_parser_h265.h
src/rocdecode/: dec_handle.h  roc_decoder.cpp  roc_decoder.h  roc_decoder_caps.h  rocdecode_api.cpp
src/rocdecode/vaapi/: vaapi_videodecoder.cpp  vaapi_videodecoder.h
src/vaapi/: vaapi_videodecoder.cpp  vaapi_videodecoder.h
test/: CMakeLists.txt
test/testScripts/: README.md  run_rocDecodeSamples.py  run_rocDecode_Conformance.py
tests/: README.md  rocDecode_report_Linux-6.2.0-36-generic-x86_64-with-glibc2.35_20231201.md  run_rocDecodeSamples.py
tests/rocDecode_videoDecodePerf_results/: rocDecode_test_results.md
tests/rocDecode_videoDecode_results/: rocDecode_test_results.md
utils/: bit_stream_parser.cpp  bit_stream_parser.h  bit_stream_parser_h265.cpp  bit_stream_parser_h265.h  byte_array.h  colorspace_kernels.cpp  colorspace_kernels.h  context.cpp  context.h  data_stream.cpp  data_stream.h  ffmpeg_demux.h  log.h  parser.cpp  parser.h  parserH265.cpp  parserH265.h  parser_buffer.cpp  parser_buffer.h  parser_data.h  platform.h  resize_kernels.cpp  resize_kernels.h  result.h  videoDemuxer.hpp  video_demuxer.h  video_demuxer.hpp  video_post_process.h
utils/rocvideodecode/: commons.h  roc_video_dec.cpp  roc_video_dec.h
utils/videoFileParser/: video_es_parser.cpp  video_es_parser.h
